--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
     "autoprefixer": "^10.4.13",
     "framer-motion": "^7.10.2",
     "gsap": "^3.11.3",
-    "locomotive-scroll": "^4.1.4",
     "postcss": "^8.4.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-locomotive-scroll": "^0.2.2",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
